@@ -1,3 +1,8 @@
+2008-03-12  Stefan Kost  <ensonic@users.sf.net>
+
+	* FSM/PhatMan/Chorus.cpp:
+	  Workaround for crasher on one machine.
+
 2008-03-10  Stefan Kost  <ensonic@users.sf.net>
 
 	* common/MachineInterface.h:
